fixed Messed up Clients section on Safari

--- a/src/components/Clients/Clients.scss
+++ b/src/components/Clients/Clients.scss
@@ -14,7 +14,9 @@
   width: 100vw;
 }
 .logo-1 {
-  height: 7rem;
+  // height: 7rem;
+  width: 7rem;
+  overflow: hidden;
   margin-right: 5rem;
 }
 .logo-1 img {
